--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -65,7 +65,7 @@
             <img src="../../images/leaf2.svg" alt="leaf-2" class="leaf-2 col-2">
             <p class="paragraph-about text-center">Merhabalar;
                 Merhaba, ben Serhat Har Aksaray'lıyım ve bilgisayar mühendisliği 1. sınıf öğrencisiyim. 
-                19 yaşındayım ve bilgisayarlara olan ilgim, babamın 6 yaşındayken bana aldığı laptop ile başladı. 
+                19 yaşındayım ve bilgisayarlara olan ilgim babamın 6 yaşındayken bana aldığı laptop ile başladı. 
                 O zamanlar, sadece oyun oynamak gibi temel şeylerle meşguldüm. Ancak lise yıllarıma geldiğimde, 
                 bir dönüm noktasıyla karşılaştım: Python programlama dersi. Bu ders, bilgisayar dünyasına olan 
                 ilgimi derinleştirdi ve daha karmaşık ve heyecan verici bir dünyayı keşfetmemi sağladı. Hatta daha sadece 
