--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -64,7 +64,7 @@
             <img src="../../images/leaf0.svg" alt="leaf-0" class="leaf-1 col-2">
             <img src="../../images/leaf2.svg" alt="leaf-2" class="leaf-2 col-2">
             <p class="paragraph-about text-center">Merhabalar;
-                Merhaba, ben Serhat Har Aksaray'lıyım ve bilgisayar mühendisliği 1. sınıf öğrencisiyim. 
+                Merhaba, ben Serhat Har Aksaray'da doğdum ve yaşıyorum, bilgisayar mühendisliği 1. sınıf öğrencisiyim. 
                 19 yaşındayım ve bilgisayarlara olan ilgim babamın 6 yaşındayken bana aldığı laptop ile başladı. 
                 O zamanlar, sadece oyun oynamak gibi temel şeylerle meşguldüm. Ancak lise yıllarıma geldiğimde, 
                 bir dönüm noktasıyla karşılaştım: Python programlama dersi. Bu ders, bilgisayar dünyasına olan 
@@ -83,7 +83,6 @@
         </div>
 
     </div>
-
     <!-- DETAILS -->
     <div class="container-custom content content-wraper" id="gallery">
 
@@ -96,7 +95,6 @@
             </p>
 
         </div> <br><br>
-
         <div class="row content-wraper">
             <p class="col-9 paragraph">
                 Toyota ve Ford öğrenci alımı için başvuru yapıp Toyota için bir proje de geliştirdim.
@@ -105,8 +103,6 @@
                 sadece 1 ve 2.sınıflar olduğu için başarılı olma şansımı bir hayli yüksek görüyorum.
             </p>
             <img src="../../images/darth_vader.jpeg" alt="p" class="image-border col-2">
-
-
         </div>
         <br><br>
 
@@ -141,5 +137,4 @@
     <script src="script/scroll.js"></script>
     <script src="script/fab.js"></script>
 </body>
-
 </html>
