--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -95,9 +95,8 @@
         <div class="row content-wraper">
             <p class="col-9 paragraph">
                 Toyota ve Ford öğrenci alımı için başvuru yapıp Toyota için bir proje de geliştirdim.
-                Bu proje bir java Backend satış yönetim sistemiydi. Projede güzel de ilerlememe rağmen 
-                3.sınıf rakiplerle baş edemeyip ne yazik bırakmak zorunda kaldım. Ancka Ford'da rakipler
-                sadece 1 ve 2.sınıflar olduğu için başarılı olma şansımı bir hayli yüksek görüyorum.
+                Bu proje bir java Backend satış yönetim sistemiydi. Ford'ta çalışmayı çok isterim
+                ve girme şansımın da bir hayli yüksek olduğunu düşünüyorum.
             </p>
             <img src="../../images/darth_vader.jpeg" alt="p" class="image-border col-2">
         </div>
