--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container mt-5">
-        <h2>Daxil ol</h2>
+        <h2>Giriş Yap</h2>
         <form>
             <div class="form-group">
                 <label for="username">Ad:</label>
