--- a/screens/city/city.html
+++ b/screens/city/city.html
@@ -54,28 +54,28 @@
             </ol>
             <div class="carousel-inner ">
                 <div class="carousel-item active ">
-                    <img src="../../images/bursa.png" alt="Slide 0" class="container" style="height: 800px;">
+                    <img src="../../images/Aksaray_merkez.jpg" alt="Slide 0" class="container" style="height: 800px;">
                     <div class="carousel-caption ">
                         <h3 class=".h"></h3>
                         <p class=".p"></p>
                     </div>
                 </div>
                 <div class="carousel-item  ">
-                    <img src="../../images/teleferik.jpg" alt="Slide 1" class="container" style="height: 800px;">
+                    <img src="../../images/kapadokya.png" alt="Slide 1" class="container" style="height: 800px;">
                     <div class="carousel-caption ">
                         <h3 class=".h"></h3>
                         <p class=".p"></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../images/suuctu.jpg" alt="Slide 2" class="container" style="height: 800px;">
+                    <img src="../../images/egri-minare.jpg" alt="Slide 2" class="container" style="height: 800px;">
                     <div class="carousel-caption">
                         <h3 class=".h"></h3>
                         <p class=".p"></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../images/cumalikizik.jpg" alt="Slide 3" class="container" style="height: 800px;">
+                    <img src="../../images/ihlara-vadisi.jpg" alt="Slide 3" class="container" style="height: 800px;">
                     <div class="carousel-caption">
                         <h3 class=".h"></h3>
                         <p class=".p"></p>
