--- a/screens/city/city.html
+++ b/screens/city/city.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../images/ihlara-vadisi.jpg" alt="Slide 3" class="container" style="height: 800px;">
+                    <img src="../../images/ihlara720.webp" alt="Slide 3" class="container" style="height: 800px;">
                     <div class="carousel-caption">
                         <h3 class=".h"></h3>
                         <p class=".p"></p>
