--- a/screens/legacy/legacy.html
+++ b/screens/legacy/legacy.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/section.css">
+    <link rel="stylesheet" href="style/footer.css">
     <title>Mirasımız</title>
 </head>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="z-index: 200;">
     <a class="navbar-brand" href="#" style="padding-left: 10px;">nav</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -37,53 +39,42 @@
         </ul>
     </div>
 </nav>
-
 <body>
-
-
     <section>
-
         <div class="card ">
-            <img src="../../images/" alt="" class="image">
-            <h1 class="headline"></h1>
+            <img src="../../images/bursa_kalesi.jpg" alt="Ihlara Vadisi" class="image">
+            <h1 class="headline">Ihlara Vadisi</h1>
         </div>
     </section>
-
     <section>
         <div class="card " style="background-color: bisque;">
             <h1 class="section-heading">
-                Ihlara Vadisi hakkında
+                Ihlara Vadisi Hakkında
             </h1>
             <div class="image-container">
                 <div class="image-box">
-                    <img src="../../images/" alt="">
-                </div>
-
-                <div class="image-box">
-                    <img src="../../images/.jpg" alt="">
+                    <img src="../../images/bursa_kalesi0.jpg" alt="Bursa Kalesi">
                 </div>
                 <div class="image-box">
-                    <img src="../../images/.jpg" alt="">
+                    <img src="../../images/bursa_kalesi1.jpg" alt="Bursa Kalesi">
+                </div>
+                <div class="image-box">
+                    <img src="../../images/bursa_kalesi2.jpg" alt="Bursa Kalesi">
                 </div>
             </div>
             <article>
                 <p class="paragraph">
-                    Aksaray'ın sıcak topraklarının üzerinde yükselen ve Melendiz Çayı'nın kıvrıla kıvrıla aktığı Ihlara Vadisi, adeta doğanın ve tarihin kucaklaştığı bir bölgedir. Bu muhteşem vadide, binlerce yıl öncesine uzanan derin bir tarih ve doğanın eşsiz güzellikleri bir araya gelerek ziyaretçilerini büyüler.
-Dünyanın en büyük ikinci kanyonu unvanına sahip olan Ihlara Vadisi, yaklaşık 14 kilometrelik uzunluğu ve 150 metreye varan derinliği ile doğa harikası bir yapıdır. Vadide yürüyüş yaparken, yüksek kayalıklar arasından akan Melendiz Çayı'nın serin sularının sesi eşlik eder. Bu çayın oyarak oluşturduğu derin vadide, kendinizi bir başka dünyada hissedersiniz. Etrafınızda yükselen kaya duvarlarının arasında dolaşırken, zamanda yolculuk yapmış gibi olursunuz.
-Ancak Ihlara Vadisi'nin büyüsü sadece doğasında değil, aynı zamanda tarihî dokusunda da saklıdır. Vadide yer alan yüzlerce mağara ve kaya kilisesi, erken Hristiyan döneminden kalma önemli eserlerdir. Bu kiliselerin duvarları, o dönemin izlerini taşır ve bazıları hâlâ orijinal fresklerini korumaktadır. Ziyaretçiler, bu tarihi kiliseleri keşfederken, o dönemin mistik atmosferini solurlar.
-Ihlara Vadisi'nin doğal yaşamı da oldukça zengindir. Vadide birçok endemik bitki türü ve nadir kuş türleri bulunur. Ziyaretçiler, vadinin yemyeşil doğasında dolaşırken, doğanın eşsiz güzelliklerini keşfederler. Ayrıca vadide bulunan restoranlarda, yöresel lezzetlerin tadına bakabilir ve yöresel el sanatlarıyla yapılan hediyelik eşyaları satın alabilirler.
-Ihlara Vadisi, sadece doğa ve tarih severleri değil, aynı zamanda ruhunu dinlendirmek isteyenleri de kendine çeker. Ziyaretçiler, vadideki eski kiliselerin sessizliğinde huzur bulur ve bu mistik atmosferde kendilerini yeniden keşfederler. Aksaray'ın bu gizemli vadisi, ziyaretçilere unutulmaz bir deneyim sunar ve her ziyaretçiye kendi iç yolculuğunu yapma fırsatı verir.
+Ihlara Vadisi, Aksaray'ın görkemli manzaralarından biridir ve ziyaretçilerine hem doğal güzelliklerin hem de derin tarihin kapılarını aralar. Bu büyüleyici vadi, yaklaşık 14 kilometrelik bir alana yayılmış olup, 150 metreye kadar ulaşan yüksek kayalıklarla çevrilidir. Melendiz Çayı'nın sakin sularının vadiden geçişi, vadide huzur verici bir atmosfer yaratır ve bu çayın oluşturduğu derin kanyon, dünyanın en büyük ikinci kanyonu olarak bilinir.
+
+Ancak Ihlara Vadisi'nin çekiciliği yalnızca coğrafi yapısıyla sınırlı değildir. Vadide bulunan yüzlerce mağara ve kaya kilisesi, tarih boyunca çeşitli medeniyetlerin izlerini taşır. Erken Hristiyan döneminden kalma bu tarihi yapılar, dini inançların ve sanatın birleştiği özel mekânlar olarak günümüze ulaşmıştır. Ziyaretçiler, bu antik kiliseleri ziyaret ederek, duvarlardaki freskleri inceleyebilir ve geçmişin mistik atmosferini soluyabilirler.
+
+Ihlara Vadisi aynı zamanda biyolojik çeşitlilik açısından da zengindir. Vadide, endemik bitki türlerinin yanı sıra nadir kuş türleri de bulunur. Ziyaretçiler, vadideki yürüyüş parkurlarında dolaşırken, bu eşsiz doğal yaşamı keşfetme fırsatı bulurlar. Ayrıca vadideki restoranlar, yöresel lezzetleri sunar ve bölgenin gastronomik zenginliğini keşfetme şansı verir.
+
+Ihlara Vadisi'nin ziyaretçileri, sadece doğanın ve tarihin büyüsüne kapılmakla kalmaz, aynı zamanda iç huzur ve dinginlik bulurlar. Vadideki sessizlik ve doğanın kucağındaki huzur verici atmosfer, ruhu dinlendirir ve stresi azaltır. Aksaray'ın bu gizemli vadisi, her ziyaretçiye benzersiz bir deneyim sunar ve yaşamın karmaşasından uzaklaşma fırsatı verir.
                 </p>
             </article>
         </div>
-
     </section>
-
-
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -91,14 +82,11 @@ Ihlara Vadisi, sadece doğa ve tarih severleri değil, aynı zamanda ruhunu dinl
 <footer class="footer">
     <address>
         <p class="footer-paragraph">
-            adress: Pınarbaşı, 1. Zindankapı Sk. No:36, 16040 Osmangazi/Bursa
+            adress: Karşıyaka, 68500 Ihlara/Güzelyurt/Aksaray, Türkiye
         </p>
-
-
     </address>
     <p class="footer-paragraph">detaylı bilgi için
         <a href="https://www.gotobursa.com.tr/tr/mekan/bursa-kalesi-175/">tıklayınız.</a>
     </p>
 </footer>
-
 </html>
