--- a/screens/legacy/legacy.html
+++ b/screens/legacy/legacy.html
@@ -11,7 +11,7 @@
     <title>Mirasımız</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="z-index: 200;">
-    <a class="navbar-brand" href="#" style="padding-left: 10px;">nav</a>
+    <a class="navbar-brand" href="#" style="padding-left: 10px;">Serhat Har</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
 <body>
     <section>
         <div class="card ">
-            <img src="../../images/bursa_kalesi.jpg" alt="Ihlara Vadisi" class="image">
+            <img src="../../images/ihlara1.jpg" alt="Ihlara Vadisi" class="image">
             <h1 class="headline">Ihlara Vadisi</h1>
         </div>
     </section>
@@ -53,13 +53,13 @@
             </h1>
             <div class="image-container">
                 <div class="image-box">
-                    <img src="../../images/bursa_kalesi0.jpg" alt="Bursa Kalesi">
+                    <img src="../../images/ihlara2.jpg" alt="Ihlara Vadisi">
                 </div>
                 <div class="image-box">
-                    <img src="../../images/bursa_kalesi1.jpg" alt="Bursa Kalesi">
+                    <img src="../../images/ihlara3.jpg" alt="Ihlara Vadisi">
                 </div>
                 <div class="image-box">
-                    <img src="../../images/bursa_kalesi2.jpg" alt="Bursa Kalesi">
+                    <img src="../../images/ihlara4.webp" alt="Ihlara Vadisi">
                 </div>
             </div>
             <article>
@@ -86,7 +86,7 @@ Ihlara Vadisi'nin ziyaretçileri, sadece doğanın ve tarihin büyüsüne kapıl
         </p>
     </address>
     <p class="footer-paragraph">detaylı bilgi için
-        <a href="https://www.gotobursa.com.tr/tr/mekan/bursa-kalesi-175/">tıklayınız.</a>
+        <a href="https://www.kulturportali.gov.tr/turkiye/aksaray/gezilecekyer/ihlara-vadisi">tıklayınız.</a>
     </p>
 </footer>
 </html>
