--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -84,7 +84,7 @@
     <div class="container-custom content content-wraper" id="gallery">
 
         <div class="row content-wraper">
-            <img src="../../images/software.jpg" alt="p" class="image-border col-2">
+            <img src="../../images/messi.jpg" alt="p" class="image-border col-2">
             <p class="col-9 paragraph">
                 Bilgisayar mühendisliği alanında aldığım eğitimle, yazılım geliştirme ve programlama konularında da
                 kendimi geliştirmeye çalışıyorum. Yazılım projeleri yapmak, sorunları çözmek ve yenilikçi çözümler
@@ -94,9 +94,8 @@
         </div> <br><br>
         <div class="row content-wraper">
             <p class="col-9 paragraph">
-                Toyota ve Ford öğrenci alımı için başvuru yapıp Toyota için bir proje de geliştirdim.
-                Bu proje bir java Backend satış yönetim sistemiydi. Ford'ta çalışmayı çok isterim
-                ve girme şansımın da bir hayli yüksek olduğunu düşünüyorum.
+                Futbol izlemeyi ve oynamayı seviyorum. Tuttuğum takım Fenerbahçe. Dünyanın en iyi futbolcusu
+                Messi'dir.
             </p>
             <img src="../../images/darth_vader.jpeg" alt="p" class="image-border col-2">
         </div>
