iletişim html ve php

--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -94,7 +94,7 @@
         </div> <br><br>
         <div class="row content-wraper">
             <p class="col-9 paragraph">
-                Futbol izlemeyi ve oynamayı seviyorum. Tuttuğum takım Fenerbahçe. Dünyanın en iyi futbolcusu
+                Futbol izlemeyi ve oynamayı seviyorum. Fenerbahçe'liyim. Dünyanın en iyi futbolcusu
                 Messi'dir.
             </p>
             <img src="../../images/darth_vader.jpeg" alt="p" class="image-border col-2">
