--- a/screens/comm/comm.html
+++ b/screens/comm/comm.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="z-index: 200;">
-    <a class="navbar-brand" href="#" style="padding-left: 10px;">nav</a>
+    <a class="navbar-brand" href="#" style="padding-left: 10px;">Serhat Har</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
