--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -21,6 +21,7 @@
                 <input type="password" class="form-control" id="password" required>
             </div>
             <button type="submit" class="btn btn-primary" id="login">Giriş Yap</button>
+            <div class="sol-alt-yazi">Ad:ad, sifre:1</div>
         </form>
     </div>
     <script src="scripts/login.js"></script>
