--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -88,14 +88,16 @@
             <p class="col-9 paragraph">
                 Bilgisayar mühendisliği alanında aldığım eğitimle, yazılım geliştirme ve programlama konularında da
                 kendimi geliştirmeye çalışıyorum. Yazılım projeleri yapmak, sorunları çözmek ve yenilikçi çözümler
-                üretmek beni motive ediyor.
+                üretmek beni motive ediyor. Aktif olarak github'da 7 tane projem bulunmaktadır. Bu projeler c++, c#,
+                java, html kullanarak yapılmıştır.
             </p>
 
         </div> <br><br>
         <div class="row content-wraper">
             <p class="col-9 paragraph">
-                Futbol izlemeyi ve oynamayı seviyorum. Fenerbahçe'liyim. Dünyanın en iyi futbolcusu
-                Messi'dir.
+                En çok ilgilendiğim hatta tek ilgilendiğim spor dalı futboldur. Fenerbahçe'nin neredeyse bütün maçlarını 
+                izlemeye çalışıyorum. Messi Avrupa'da iken onun da her maçını izliyordum, çünkü dünyanın en iyisini izlemek
+                büyük bir nimetti.
             </p>
             <img src="../../images/darth_vader.jpeg" alt="p" class="image-border col-2">
         </div>
@@ -105,7 +107,7 @@
             <img src="../../images/silverhand.jpg" alt="p" class="image-border col-2">
             <p class="col-9 paragraph " id="parag">
                 Oyun oynamak ve dizi/film izlemek en çok zevk aldığım hobilerdir. Neredeyse her gün bunlara
-                vakit ayırırım. Star Wars en sevdiğim film serisidir, Cyberpunk 2077 ise en sevdiğim oyundur.
+                vakit ayırırım. Breaking Bad favori dizimdir, Star Wars en sevdiğim film serisidir, Cyberpunk 2077 ise en sevdiğim oyundur.
             </p>
 
         </div>
