--- a/screens/legacy/legacy.html
+++ b/screens/legacy/legacy.html
@@ -82,10 +82,10 @@ Ihlara Vadisi'nin ziyaretçileri, sadece doğanın ve tarihin büyüsüne kapıl
 <footer class="footer">
     <address>
         <p class="footer-paragraph">
-            adress: Karşıyaka, 68500 Ihlara/Güzelyurt/Aksaray, Türkiye
+            Adres: Karşıyaka, 68500 Ihlara/Güzelyurt/Aksaray, Türkiye
         </p>
     </address>
-    <p class="footer-paragraph">detaylı bilgi için
+    <p class="footer-paragraph">Detaylı Bilgi İçin Tıklayınız
         <a href="https://www.kulturportali.gov.tr/turkiye/aksaray/gezilecekyer/ihlara-vadisi">tıklayınız.</a>
     </p>
 </footer>
