--- a/screens/comm/comm.html
+++ b/screens/comm/comm.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim Formu</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 </head>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="z-index: 200;">
     <a class="navbar-brand" href="#" style="padding-left: 10px;">Serhat Har</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -33,11 +35,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="..\interests/interests.html">İlgi Alanlarım</a>
             </li>
+
         </ul>
     </div>
 </nav>
+
 <body>
     <div id="app" class="container">
+        <form action="comm.php" method="POST">
         <h1 class="text-center">İletişim Formu</h1>
         <form @submit.prevent="submitForm">
             <div class="form-group">
@@ -52,6 +57,7 @@
                 <label for="age">Yaşınız:</label>
                 <input type="number" id="age" v-model="formData.age" class="form-control">
             </div>
+
             <div class="form-group">
                 <label>Gender:</label>
                 <div class="form-check">
@@ -59,11 +65,26 @@
                         class="form-check-input">
                     <label for="erkek" class="form-check-label">Erkek</label>
                 </div>
+
                 <div class="form-check">
                     <input type="radio" id="kadin" name="gender" value="k" v-model="formData.gender"
                         class="form-check-input">
                     <label for="kadin" class="form-check-label">Kadın</label>
                 </div>
+
+                <div class="form-check">
+                    <input type="radio" id="diger" name="gender" value="d" v-model="formData.gender"
+                        class="form-check-input">
+                    <label for="diger" class="form-check-label">Diğer</label>
+                </div>
+
+                <div class="form-check">
+                    <input type="radio" id="nogender" name="gender" value="n" v-model="formData.gender"
+                        class="form-check-input">
+                    <label for="nogender" class="form-check-label">Belirtmek istemiyorum</label>
+                </div>
+            </div>
+
             <div class="form-group">
                 <label for="text">E-posta:</label>
                 <input type="text" id="email" v-model="formData.email" class="form-control">
@@ -78,9 +99,13 @@
             </div>
         </form>
     </div>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="script/controll.js"></script>
+
 </body>
+
 </html>
