--- a/screens/comm/comm.html
+++ b/screens/comm/comm.html
@@ -42,7 +42,7 @@
 
 <body>
     <div id="app" class="container">
-        <form action="comm.php" method="POST">
+        <form action="https://localhost/comm.php" method="POST">
         <h1 class="text-center">İletişim Formu</h1>
         <form @submit.prevent="submitForm">
             <div class="form-group">
