--- a/screens/comm/comm.html
+++ b/screens/comm/comm.html
@@ -42,20 +42,20 @@
 
 <body>
     <div id="app" class="container">
-        <form action="https://localhost/comm.php" method="POST">
         <h1 class="text-center">İletişim Formu</h1>
+        <form id="myform" action = "https://localhost/comm.php" method="POST" onsubmit="return submitForm()">
         <form @submit.prevent="submitForm">
             <div class="form-group">
                 <label for="name">İsim:</label>
-                <input type="text" id="name" v-model="formData.name" class="form-control">
+                <input type="text" id="name" name = "name" v-model="formData.name" class="form-control">
             </div>
             <div class="form-group">
                 <label for="surname">Soyadı:</label>
-                <input type="text" id="surname" v-model="formData.surname" class="form-control">
+                <input type="text" id="surname" name = "surname" v-model="formData.surname" class="form-control">
             </div>
             <div class="form-group">
                 <label for="age">Yaşınız:</label>
-                <input type="number" id="age" v-model="formData.age" class="form-control">
+                <input type="number" id="age" name = "age" v-model="formData.age" class="form-control">
             </div>
 
             <div class="form-group">
@@ -87,20 +87,18 @@
 
             <div class="form-group">
                 <label for="text">E-posta:</label>
-                <input type="text" id="email" v-model="formData.email" class="form-control">
+                <input type="text" id="email" name = "email" v-model="formData.email" class="form-control">
             </div>
             <div class="form-group">
                 <label for="message">Mesaj:</label>
-                <textarea id="message" v-model="formData.message" class="form-control"></textarea>
+                <textarea id="message" name = "message" v-model="formData.message" class="form-control"></textarea>
             </div>
             <div>
-                <button type="submit" class="btn btn-primary">Gönder</button>
+                <button type="submit" @click="submitForm" class="btn btn-primary">Gönder</button>
                 <button type="button" @click="resetForm" class="btn btn-secondary">Temizle</button>
             </div>
         </form>
     </div>
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
