--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -49,7 +49,7 @@
     <div class="container-custom" id="greeting">
         <div class="content card-greeting content-wraper">
             <h1 class="headline-greeting">Ben Serhat</h1>
-            <img class="image-greeting" src="../../images/Hakkımda_ben.png" alt="BEN">
+            <img class="image-greeting" src="../../images/ankara.jpg" alt="BEN">
         </div>
     </div>
 
