--- a/screens/city/city.html
+++ b/screens/city/city.html
@@ -96,12 +96,14 @@
     <!-- Page Sections -->
 
     <div id="section1" class="page-section " style="background-color: rgb(2, 245, 205);">
+        <img src="../../images/AksarayClockTower.jpg" style="height: 810px; width: 700px; border-radius: 15px">>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
         </div>
     </div>
     <div id="section1" class="page-section " style="background-color: rgb(118, 179, 106);">
+        <img src="../../images/cappaa.png" style="height: 810px; width: 700px; border-radius: 15px">>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
@@ -109,6 +111,7 @@
     </div>
 
     <div id="section2" class="page-section" style="background-color: rgb(108, 197, 242);">
+        <img src="../../images/egri.png" style="height: 810px; border-radius: 15px">>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
@@ -116,6 +119,7 @@
     </div>
 
     <div id="section3" class="page-section" style="background-color: rgb(245, 184, 123);">
+        <img src="../../images/ihlarason.png" style="height: 810px; border-radius: 15px">>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
