--- a/screens/city/city.html
+++ b/screens/city/city.html
@@ -96,22 +96,28 @@
     <!-- Page Sections -->
 
     <div id="section1" class="page-section " style="background-color: rgb(2, 245, 205);">
-        <img src="../../images/AksarayClockTower.jpg" style="height: 810px; width: 700px; border-radius: 15px">>
+        <a href="https://tr.wikipedia.org/wiki/Aksaray_(il)" target="_blank">   
+        <img src="../../images/AksarayClockTower.jpg" class = "contanier" style="height: 810px; border-radius: 15px">
+        </a>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
         </div>
     </div>
     <div id="section1" class="page-section " style="background-color: rgb(118, 179, 106);">
-        <img src="../../images/cappaa.png" style="height: 810px; width: 700px; border-radius: 15px">>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
         </div>
+        <a href="https://tr.wikipedia.org/wiki/Kapadokya" target="_blank">   
+            <img src="../../images/cappaa.png"class = "contanier" style="height: 810px; border-radius: 15px">
+            </a>
     </div>
 
     <div id="section2" class="page-section" style="background-color: rgb(108, 197, 242);">
-        <img src="../../images/egri.png" style="height: 810px; border-radius: 15px">>
+        <a href="https://tr.wikipedia.org/wiki/E%C4%9Fri_Minare" target="_blank">   
+            <img src="../../images/egri.png" class = "contanier" style="height: 810px; border-radius: 15px">
+        </a>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
@@ -119,11 +125,13 @@
     </div>
 
     <div id="section3" class="page-section" style="background-color: rgb(245, 184, 123);">
-        <img src="../../images/ihlarason.png" style="height: 810px; border-radius: 15px">>
         <div class="container">
             <h2 class=".sh"></h2>
             <p class=".sp"></p>
         </div>
+        <a href="https://tr.wikipedia.org/wiki/Ihlara,_G%C3%BCzelyurt" target="_blank">   
+            <img src="../../images/ihlarason.png" class = "contanier" style="height: 810px; border-radius: 15px">
+        </a>
     </div>
 
     <!-- Script -->
