--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -84,7 +84,8 @@
     <div class="container-custom content content-wraper" id="gallery">
 
         <div class="row content-wraper">
-            <img src="../../images/messi.jpg" alt="p" class="image-border col-2">
+            <a href="https://tr.wikipedia.org/wiki/Lionel_Messi" target="_blank">  
+                <img src="../../images/messi.jpg" alt="p" class="container" style="height: 275px; border-radius: 50px" > </a>
             <p class="col-9 paragraph">
                 Bilgisayar mühendisliği alanında aldığım eğitimle, yazılım geliştirme ve programlama konularında da
                 kendimi geliştirmeye çalışıyorum. Yazılım projeleri yapmak, sorunları çözmek ve yenilikçi çözümler
@@ -99,12 +100,14 @@
                 izlemeye çalışıyorum. Messi Avrupa'da iken onun da her maçını izliyordum, çünkü dünyanın en iyisini izlemek
                 büyük bir nimetti.
             </p>
-            <img src="../../images/darth_vader.jpeg" alt="p" class="image-border col-2">
+            <a href="https://tr.wikipedia.org/wiki/Anakin_Skywalker" target="_blank">  
+                <img src="../../images/darth_vader.jpeg" alt="p" class="container" style="height: 250px; border-radius: 50px" > </a>
         </div>
         <br><br>
 
         <div class="row content-wraper">
-            <img src="../../images/silverhand.jpg" alt="p" class="image-border col-2">
+            <a href="https://tr.wikipedia.org/wiki/Cyberpunk_2077" target="_blank">  
+            <img src="../../images/silverhand.jpg" alt="p" class="container" style="height: 200px; border-radius: 50px" ></a>
             <p class="col-9 paragraph " id="parag">
                 Oyun oynamak ve dizi/film izlemek en çok zevk aldığım hobilerdir. Neredeyse her gün bunlara
                 vakit ayırırım. Breaking Bad favori dizimdir, Star Wars en sevdiğim film serisidir, Cyberpunk 2077 ise en sevdiğim oyundur.
