--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -11,17 +11,18 @@
 <body>
     <div class="container mt-5">
         <h2>Giriş Yap</h2>
-        <form>
+        <form id="form" action="https://localhost/login.php" method="POST">
+
             <div class="form-group">
-                <label for="username">Ad:</label>
-                <input type="text" class="form-control" id="username" required>
+                <label for="text">Kullanıcı adı:</label>
+                <input type="text" id="username" name = "username" v-model="formData.username" class="form-control">
             </div>
             <div class="form-group">
-                <label for="password">Şifre:</label>
-                <input type="password" class="form-control" id="password" required>
+                <label for="text">Şifre:</label>
+                <input type="text" id="password" name = "password" v-model="formData.password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-primary" id="login">Giriş Yap</button>
-            <div class="sol-alt-yazi">Ad:ad, sifre:1</div>
+
+            <button type="submit" @click = "submitForm" class="btn btn-primary">Giriş yap</button>
         </form>
     </div>
     <script src="scripts/login.js"></script>
