--- a/screens/legacy/legacy.html
+++ b/screens/legacy/legacy.html
@@ -42,7 +42,7 @@
 <body>
     <section>
         <div class="card ">
-            <img src="../../images/ihlara1.jpg" alt="Ihlara Vadisi" class="image">
+            <img src="../../images/ihlarayeni.jpg" alt="Ihlara Vadisi" class="image">
             <h1 class="headline">Ihlara Vadisi</h1>
         </div>
     </section>
@@ -56,7 +56,7 @@
                     <img src="../../images/ihlara2.jpg" alt="Ihlara Vadisi">
                 </div>
                 <div class="image-box">
-                    <img src="../../images/ihlara3.jpg" alt="Ihlara Vadisi">
+                    <img src="../../images/ihlarayeni1.jpg" alt="Ihlara Vadisi">
                 </div>
                 <div class="image-box">
                     <img src="../../images/ihlara4.webp" alt="Ihlara Vadisi">
