--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -15,11 +15,11 @@
         <form id="form" action="https://localhost/login.php" method="POST">
 
             <div class="form-group">
-                <label for="text">Kullanıcı adı:</label>
+                <label for="text">Kullanıcı adımız:</label>
                 <input type="text" id="username" name = "username" v-model="formData.username" class="form-control">
             </div>
             <div class="form-group">
-                <label for="text">Şifre:</label>
+                <label for="text">Şifreniz:</label>
                 <input type="text" id="password" name = "password" v-model="formData.password" class="form-control">
             </div>
 
