--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -14,7 +14,7 @@
         background-size: cover;
         background-repeat: no-repeat; /* Arka plan resminin tekrarlanmasını engeller */
         display: flex;
-        background-image: url('/images/aksaraylogin.jpg');
+        background-image: url("/images/aksaraylogin.jpg");
     }
     </style>
     <div class="container mt-5">
