--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -5,18 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
-    <style>
-    body {
-        background-size: cover;
-        background-repeat: no-repeat; /* Arka plan resminin tekrarlanmasını engeller */
-        display: flex;
-        background-image: url("/images/aksaraylogin.jpg");
-    }
-    </style>
     <div class="container mt-5">
         <h2>Giriş Yap</h2>
         <form id="form" action="https://localhost/login.php" method="POST">
