--- a/screens/interests/interests.html
+++ b/screens/interests/interests.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-  <h1>Popüler Dizi ve Filmler</h1>
+  <h1>Son Dönemde Popüler Olan Dizi ve Filmler</h1>
   <div id="movies"></div>
 
   <script src="script/script.js"></script>
