http protokolü düzeltmesi

--- a/screens/comm/comm.html
+++ b/screens/comm/comm.html
@@ -42,7 +42,7 @@
 <body>
     <div id="app" class="container">
         <h1 class="text-center">İletişim Formu</h1>
-        <form id="myform" action = "https://localhost/comm.php" method="POST" onsubmit="return submitForm()">
+        <form id="myform" action = "http://localhost/comm.php" method="POST" onsubmit="return submitForm()">
         <form @submit.prevent="submitForm">
             <div class="form-group">
                 <label for="name">İsim:</label>
