--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container mt-5">
         <h2>Giriş Yap</h2>
-        <form id="form" action="https://localhost/login.php" method="POST">
+        <form id="form" action="http://localhost/login.php" method="POST">
 
             <div class="form-group">
                 <label for="text">Kullanıcı adımız:</label>
