--- a/screens/login/login.html
+++ b/screens/login/login.html
@@ -15,7 +15,7 @@
         <form id="form" action="http://localhost/login.php" method="POST">
 
             <div class="form-group">
-                <label for="text">Kullanıcı adımız:</label>
+                <label for="text">Kullanıcı adınız:</label>
                 <input type="text" id="username" name = "username" v-model="formData.username" class="form-control">
             </div>
             <div class="form-group">
